@@ -7,6 +7,7 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
   INKEY(delay). This is now fixed.
 - GCOL action codes (at least for foreground colours) are now supported.
   (The Turtle Graphics demo from the BBC Master welcome disc works properly!)
+- PLOT with Inverse code now supported.
 - Telstar client updated, enhancements from gARetH baBB - thank you!
 * V1.21.13
 - Rework temp file bits to use mkstemp instead of tmpnam.
